--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "flexsearch": "^0.7.43",
     "framer-motion": "^11.0.3",
     "next": "14.1.0",
+    "next-themes": "^0.2.1",
     "react": "^18",
     "react-dom": "^18",
     "react-highlight-words": "^0.20.0",
