add cube with 5minds textures

--- a/package.json
+++ b/package.json
@@ -16,11 +16,14 @@
     "@mdx-js/react": "^3.0.1",
     "@next/mdx": "^14.1.0",
     "@nextui-org/react": "^2.2.9",
+    "@react-three/drei": "^9.97.5",
+    "@react-three/fiber": "^8.15.16",
     "@sindresorhus/slugify": "^2.2.1",
     "@types/mdx": "^2.0.11",
     "clsx": "^2.1.0",
     "flexsearch": "^0.7.43",
-    "framer-motion": "^11.0.3",
+    "framer-motion": "^11.0.5",
+    "framer-motion-3d": "^11.0.5",
     "next": "14.1.0",
     "next-themes": "^0.2.1",
     "react": "^18",
@@ -30,6 +33,7 @@
     "rehype-slug": "^6.0.0",
     "remark": "^15.0.1",
     "remark-gfm": "^4.0.0",
+    "sass": "^1.70.0",
     "simple-functional-loader": "^1.2.1",
     "terser-webpack-plugin": "^5.3.10",
     "unist-util-filter": "^5.0.1",
